# item-classify-system

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build-android.yml  build-windows.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  QRCodeScanner.tsx
frontend/src/components/items/: ItemDialog.tsx  ItemList.tsx
frontend/src/components/locations/: LocationDialog.tsx  LocationTree.tsx  QRCodeDialog.tsx
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Items.tsx  Labels.tsx  Locations.tsx  Settings.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 1_initial.sql  2_fix_parent_id.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: items.rs  locations.rs  mod.rs  pdf.rs  qrcode.rs  sync.rs
src-tauri/src/database/: mod.rs  models.rs
