[package]
name = "item-classify-system"
version = "0.0.0"
description = "物品分类管理系统"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
base64 = "0.22"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
printpdf = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "item_classify_system"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
